# TransportationLLMAgent

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements-server.txt  requirements-train.txt  requirements.txt  sitecustomize.py
configs/: agent.yaml  app.yaml  llm.yaml  rag.yaml  train_lora.yaml
data/knowledge_base/: congestion_diagnosis_guide.md  digital_twin_traffic_platform.md  signal_control_principles.md  traffic_incident_response.md  traffic_operation_report_template.md
data/sample_traffic/: road_segments.csv  signal_plans.csv  traffic_events.csv  traffic_forecasts.csv  traffic_metrics.csv
data/sft/: README.md  dataset_stats.json  raw_cases.yaml  train.jsonl  val.jsonl
docs/: architecture.md  eval_design.md  interview_notes.md  lora_training_design.md  rag_design.md  remote_training.md  tool_calling_design.md  workflow_design.md
qwen3_agent_sft/: __init__.py
scripts/: generate_sample_traffic_data.py  merge_lora.sh  prepare_sft_data.py  run_api.sh  run_eval.sh  run_streamlit.sh  serve_qwen3_sglang.sh  serve_qwen3_vllm.sh  test_llm_server.py  train_qwen3_lora.sh  train_qwen3_qlora.sh
src/qwen3_agent_sft/: config.py
src/qwen3_agent_sft/agent/: __init__.py  answer_builder.py  executor.py  planner.py  prompt_templates.py  safety.py  schemas.py  tool_registry.py  tool_schemas.py  trace.py
src/qwen3_agent_sft/api/: main.py
tests/: test_eval.py  test_executor.py  test_llm_clients.py  test_planner.py  test_rag.py  test_sft_dataset.py  test_tool_registry.py  test_trace.py  test_traffic_tools.py  test_workflows.py
(+27 files in other folders)
